--- a/SlideRightTransition/Swipe.storyboard
+++ b/SlideRightTransition/Swipe.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ZIc-sQ-6Nu">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,7 +14,7 @@
             <objects>
                 <navigationController id="ZIc-sQ-6Nu" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="eEw-0Y-fVd">
-                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -24,23 +28,23 @@
         <!--FirstViewController-->
         <scene sceneID="gcj-mB-cWa">
             <objects>
-                <viewController storyboardIdentifier="FirstViewController" id="puZ-7d-WSV" userLabel="FirstViewController" customClass="SwipeFirstViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FirstViewController" id="puZ-7d-WSV" userLabel="FirstViewController" customClass="SwipeFirstViewController" customModule="SlideRightTransition" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="04d-kI-oXk"/>
                         <viewControllerLayoutGuide type="bottom" id="kCm-Z4-6an"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="LS8-cJ-iJd">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="to2-UR-X5W">
-                                <rect key="frame" x="262" y="228" width="76" height="144"/>
+                                <rect key="frame" x="149.5" y="261.5" width="76" height="144"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="120"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QAh-eI-szS">
-                                <rect key="frame" x="191.5" y="550" width="217" height="30"/>
+                                <rect key="frame" x="79" y="617" width="217" height="30"/>
                                 <state key="normal" title="Present With Custom Transition">
                                     <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -57,39 +61,32 @@
                             <constraint firstItem="kCm-Z4-6an" firstAttribute="top" secondItem="QAh-eI-szS" secondAttribute="bottom" constant="20" id="NPj-6n-SJ3"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Swipe" id="Ts4-50-TCR">
-                        <barButtonItem key="leftBarButtonItem" title="Menu" id="za2-6u-Fb3">
-                            <connections>
-                                <segue destination="oHl-Df-ads" kind="unwind" identifier="" unwindAction="unwindToMenuViewController:" id="MOH-Xf-C8s"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Swipe" id="Ts4-50-TCR"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HN4-wr-hgE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="oHl-Df-ads" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1178" y="578"/>
         </scene>
         <!--SecondViewController-->
         <scene sceneID="yhZ-hV-rsu">
             <objects>
-                <viewController storyboardIdentifier="SecondViewController" id="phA-vT-NZO" userLabel="SecondViewController" customClass="SwipeSecondViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SecondViewController" id="phA-vT-NZO" userLabel="SecondViewController" customClass="SwipeSecondViewController" customModule="SlideRightTransition" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="cFc-TN-3wc"/>
                         <viewControllerLayoutGuide type="bottom" id="dsQ-4U-qoi"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="WLg-ql-2ZP">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="B" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f8K-z5-YGJ">
-                                <rect key="frame" x="263" y="228" width="74" height="144"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="B" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f8K-z5-YGJ">
+                                <rect key="frame" x="151" y="261.5" width="73" height="144"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="120"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipu-Q6-Qxl">
-                                <rect key="frame" x="273" y="550" width="54" height="30"/>
+                                <rect key="frame" x="160.5" y="617" width="54" height="30"/>
                                 <state key="normal" title="Dismiss">
                                     <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
